--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,9 @@
 name = "cosmology"
 version = "0.1.0"
 edition = "2021"
+description = "An early-in-development crate aiming to contain a lot of utility functions for cosmology."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ode_solvers = "0.3.6"
 plotters = "0.3.1"
