add repo to Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "cosmology"
 author = "cavemanloverboy"
+repository = "https://github.com/cavemanloverboy/cosmology"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
