--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,6 @@ colossus-python = ["pyo3"]
 [dependencies]
 quadrature = "0.1.2"
 
-
 # Optional testing dependency!
 # We used colossus==1.3.1 for testing
 [dependencies.pyo3]
@@ -29,3 +28,8 @@ optional = true
 [dev-dependencies]
 plotters = "0.3.1"
 concat-idents = "1.1.3"
+dry = "0.1.1"
+
+[profile.dev]
+codegen-units = 1024
+
