--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cosmology"
-author = "cavemanloverboy"
+authors = ["cavemanloverboy <caveycool@gmail.com>"]
 repository = "https://github.com/cavemanloverboy/cosmology"
 version = "0.1.1"
 edition = "2021"
