--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ quadrature = "0.1.2"
 hammer-and-sample = { version = "0.1.4", features = ["rayon"], optional = true }
 rand = { version = "0.8.5", optional = true }
 rand_pcg = { version = "0.3.1", optional = true }
+criterion = "0.3.6"
 
 # Optional testing dependency!
 # We used colossus==1.3.1 for testing
@@ -38,3 +39,7 @@ rand_distr = "0.4.3"
 [profile.dev]
 codegen-units = 1024
 
+
+[[bench]]
+name = "power"
+harness = false
