--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,9 @@ description = "An early-in-development crate aiming to provide a lot of utilitie
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["bayesian"]
+default = ["bayesian", "nn"]
 bayesian = ["hammer-and-sample", "rand", "rand_pcg"]
+nn = []
 colossus-python = ["pyo3"]
 
 [dependencies]
@@ -36,6 +37,7 @@ plotters = "0.3.1"
 concat-idents = "1.1.3"
 dry = "0.1.1"
 rand_distr = "0.4.3"
+assert_approx_eq = "1.1.0"
 
 [profile.dev]
 codegen-units = 1024
