add grf, bias example (wip)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ rand = { version = "0.8.5", optional = true }
 rand_pcg = { version = "0.3.1", optional = true }
 criterion = "0.3.6"
 ouroboros = "0.15.3"
+sequential-integration = "1.0.2"
+rayon = "1.5.3"
 
 # Optional testing dependency!
 # We used colossus==1.3.1 for testing
@@ -34,6 +36,9 @@ optional = true
 
 [dev-dependencies]
 plotters = "0.3.1"
+fnntw = "0.2.3"
+ndarray-npy = "0.8.1"
+ndarray = "0.15.6"
 concat-idents = "1.1.3"
 dry = "0.1.1"
 rand_distr = "0.4.3"
@@ -49,4 +54,8 @@ harness = false
 
 [[bench]]
 name = "correlation"
+harness = false
+
+[[bench]]
+name = "integration"
 harness = false
