--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ concat-idents = "1.1.3"
 dry = "0.1.1"
 rand_distr = "0.4.3"
 assert_approx_eq = "1.1.0"
+plotly = {version = "0.7.0", features = ["kaleido"] }
 
 [profile.dev]
 codegen-units = 1024
