--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,10 @@ description = "An early-in-development crate aiming to provide a lot of utilitie
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["bayesian", "nn"]
+default = ["bayesian", "nn", "use-mpi"]
 bayesian = ["hammer-and-sample", "rand", "rand_pcg"]
 nn = []
+use-mpi = ["mpi", "balancer", "lazy_static"]
 colossus-python = ["pyo3"]
 
 [dependencies]
@@ -22,10 +23,13 @@ quadrature = "0.1.2"
 hammer-and-sample = { version = "0.1.4", features = ["rayon"], optional = true }
 rand = { version = "0.8.5", optional = true }
 rand_pcg = { version = "0.3.1", optional = true }
-criterion = "0.3.6"
 ouroboros = "0.15.3"
-rayon = "1.5.3"
+rayon = "1.7.0"
 indicatif = "0.17.0"
+balancer = { git = "https://github.com/cavemanloverboy/balancer.git", version = "0.1.0", optional = true }
+mpi = { version = "0.6.0", optional = true, features = ["derive"] }
+lazy_static = { version = "1.4.0", optional = true }
+rand_chacha = "0.3.1"
 
 # Optional testing dependency!
 # We used colossus==1.3.1 for testing
@@ -46,6 +50,7 @@ dry = "0.1.1"
 rand_distr = "0.4.3"
 assert_approx_eq = "1.1.0"
 plotly = {version = "0.7.0", features = ["kaleido"] }
+criterion = "0.4.0"
 
 
 [[bench]]
