--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ categories = ["science"]
 description = "An early-in-development crate aiming to provide a lot of utilities commonly used in cosmology."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.release]
+codegen-units = 1
+lto = "fat"
 
 [features]
 default = ["bayesian", "nn", "use-mpi"]
